Shop-Helm/templates/ingress-client-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: client.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-server-svc
            port:
              number: 8000
